test/analyze/type_check/methods/basic.exp
Error: Cannot resolve field or method with name `nonexist` on type `Type1`
test/analyze/type_check/methods/basic.myte:17:2
 17 |   x.nonexist();
    |   ^

Error: Cannot resolve field or method with name `bar` on type `T: FooTrait`
test/analyze/type_check/methods/basic.myte:27:2
 27 |   x.bar();
    |   ^

Error: Cannot resolve field or method with name `bar` on type `implicit FooTrait`
test/analyze/type_check/methods/basic.myte:28:2
 28 |   y.bar();
    |   ^

Error: Cannot resolve field or method with name `nonexist` on type `Unit`
test/analyze/type_check/methods/basic.myte:36:2
 36 |   x.nonexist();
    |   ^

Error: Cannot resolve field or method with name `nonexist` on type `Unit`
test/analyze/type_check/methods/basic.myte:37:2-4
 37 |   ().nonexist();
    |   ^^

Error: Cannot resolve field or method with name `nonexist` on type `Int`
test/analyze/type_check/methods/basic.myte:43:2
 43 |   1.nonexist();
    |   ^

Error: Cannot resolve field or method with name `nonexist` on type `Long`
test/analyze/type_check/methods/basic.myte:44:2-12
 44 |   2147483648.nonexist();
    |   ^^^^^^^^^^